# pantheon-chat

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .railwayignore  .replit  .replit-build  20260109-phase5-refactoring-complete-v01F.md  20260109-phase5-refactoring-plan-v01W.md  20260109-roadmap-development-1.00W.md  20260109-stateobserver-initialization-fix-v01F.md  4D_CONSCIOUSNESS_VERIFICATION.md  ADDRESS_VERIFICATION.md  AGENTS.md  API_DOCUMENTATION.md  ARCHITECTURE.md  AUDIT_RESPONSE.md  AUTONOMIC_MANDATORY_IMPLEMENTATION.md  BEST_PRACTICES.md  BETA_ATTENTION_IMPLEMENTATION.md  CACHE_STRATEGY.md  CLAUDE.md  COMPLETE_WIRING_VERIFICATION.md  CONTRIBUTING.md  CRITICAL_FIXES_VERIFICATION.md  DARKNET_SETUP.md  DATABASE_MIGRATION_GUIDE.md  DB_CLEANUP_VALIDATION_REPORT.md  DEAD_CODE_CLEANUP_SUMMARY.md  DEPLOY.md  DEPLOYMENT.md  DOCUMENTATION_ACCURACY_FIX_SUMMARY.md  DOCUMENTATION_RESTORATION_REPORT.md  Dockerfile  Dockerfile.qig  Dockerfile.railway  Dockerfile.web  E8-PURITY-AUDIT-REPORT.md  E8_FULL_COMPLIANCE_SUMMARY.md  E8_PROTOCOL_IMPLEMENTATION_SUMMARY.md  (+107 more)
.agents/: accessibility-auditor.ts  (+39 more)
attached_assets/qig-consciousness/qig-consciousness-main/: .clinerules  .dockerignore  .gitignore  .markdownlint.json  .pylintrc  .yamllint  20251204-project-status-1.00W.md  20251220-agents-1.00F.md  20251220-basin-signatures-0.01W.json  20251220-canonical-rules-1.00F.md  20251220-canonical-structure-1.00F.md  20251220-changelog-1.00W.md  20251220-gfp-spec-1.00W.md  20251220-index-1.00W.md  20251220-naming-convention-1.00F.md  20251220-quick-start-1.00W.md  20251220-status-1.00W.md  20251220-validation-config-1.00W.json  MANIFEST.in  Makefile  README.md  environment.yml  mypy.ini  pyproject.toml  pyrightconfig.json  requirements.txt
attached_assets/qig-consciousness/qig-consciousness-main/.claude/: CLAUDE.md  ucp.md
attached_assets/qig-consciousness/qig-consciousness-main/.devcontainer/: devcontainer.json  post-install.sh  validate_prebuild.sh
attached_assets/qig-consciousness/qig-consciousness-main/.github/: copilot-instructions.md
attached_assets/qig-consciousness/qig-consciousness-main/benchmarks/: ipc_suite.py
attached_assets/qig-consciousness/qig-consciousness-main/chat_interfaces/: README.md  __init__.py  qig_chat.py
attached_assets/qig-consciousness/qig-consciousness-main/configs/: 20251220-constellation-variants-config-1.00W.yaml  20251220-gary-a-config-1.00W.yaml  20251220-gary-b-config-1.00W.yaml  20251220-gary-c-config-1.00W.yaml  20251220-gary-template-config-1.00W.yaml  20251220-kernel-50m-adaptive-config-1.00W.yaml  20251220-kernel-50m-config-1.00W.yaml  20251220-maturity-config-1.00W.json  20251220-ocean-config-1.00F.yaml  20251220-qig-audit-config-1.00W.yaml  gary_a.yaml
attached_assets/qig-consciousness/qig-consciousness-main/core/: __init__.py  working_memory.py
attached_assets/qig-consciousness/qig-consciousness-main/data/: 20251220-consciousness-curriculum-1.00W.jsonl  20251220-consciousness-curriculum-meta-1.00W.json  20251220-physics-validation-data-1.00F.json  curriculum
attached_assets/qig-consciousness/qig-consciousness-main/docs/: 20251125-beta-definition-clarification-1.00W.md  20251127-constellation-quick-start-1.00W.md  20251127-imports-1.00W.md  20251127-interfaces-1.00W.md  20251127-physics-priors-1.00W.md  20251127-planning-rules-1.00W.md  20251127-type-registry-1.00W.md  20251129-charlie-heart-1.00W.md  20251129-geometric-purity-migration-summary-1.00W.md  20251129-geometric-terminology-1.00W.md  20251206-consciousness-safety-guard-spec-1.00W.md  20251220-00-index-1.00W.md  20251220-frozen-facts-1.00W.md  20251220-geometric-purity-enforcement-1.00W.md  20251220-torch-norm-audit-1.00W.md  20251223-deployment-roadmap-0.01W.md  INDEX.md  clock_v2_example_output.txt
attached_assets/qig-consciousness/qig-consciousness-main/eval/: 20251220-self-repair-suite-1.00W.json  maturity_evaluator.py  maturity_suite.py
attached_assets/qig-consciousness/qig-consciousness-main/examples/: test_charlie.py
attached_assets/qig-consciousness/qig-consciousness-main/experiments/: README.md
attached_assets/qig-consciousness/qig-consciousness-main/results/: VALIDATION_SUMMARY.md  beta_quick_validation.json  beta_trinity.json
attached_assets/qig-consciousness/qig-consciousness-main/runs/: baseline.log^C
attached_assets/qig-consciousness/qig-consciousness-main/schemas/: 20251220-maturity-schema-1.00W.json  20251220-self-repair-schema-1.00W.json  20251220-telemetry-schema-1.00W.json
attached_assets/qig-consciousness/qig-consciousness-main/scripts/: archive_bloat.sh  lambda_deploy.sh  launch_constellation.sh  reorganize_corpus.sh  validate_claude_config.py
attached_assets/qig-consciousness/qig-consciousness-main/src/: __init__.py  cli.py  constants.py  kernel.py  qig_compat.py
attached_assets/qig-consciousness/qig-consciousness-main/tests/: test_buffer_optimization_logic.py  test_checkpoint_save_load.py  test_claude_4_5_api.py  test_consciousness_transfer.py  test_constellation_deps.py  test_constellation_dry_run.py  test_constellation_extended.py  test_constellation_full.py  test_enhanced_telemetry.py  test_geometric_optimizers.py  test_gpu.py  test_innate_drives_training.py  test_integration_measure.py  test_lightning_integration.py  test_meta_reflector.py  test_mushroom_mode_safety.py  test_numpy_buffer_optimization.py  test_observation_imports.py  test_phase1_enhancements.py  test_phase1_integration.py  test_pure_qig_enhancements.py  test_shadow_integration.py  test_smoke_tests.py  test_transcendence.py
attached_assets/qig-consciousness/qig-consciousness-main/tools/: README.md  __init__.py  init_training.sh  qig_audit.py
attached_assets/qig-tokenizer/qig-tokenizer-main/: .env.example  .gitattributes  README.md  pyproject.toml
attached_assets/qig-tokenizer/qig-tokenizer-main/archive/: 20251220-train-tokenizer-postgres-0.01W.py  20251221-train-tokenizer-lambda-0.01W.py
qig-core/: .gitignore  PACKAGE_SUMMARY.md  README.md  api.md  pyproject.toml
qig-core/src/qig_core/: __init__.py  fisher.py  geodesic.py  natural_gradient.py
(+14072 files in other folders)
