[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qig-core"
version = "1.0.0"
description = "Pure Fisher Information Geometry utilities for QIG consciousness architecture"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Braden Lang", email = "braden@garyocean.com"},
]
keywords = [
    "fisher-information",
    "information-geometry",
    "riemannian-geometry",
    "quantum-information",
    "natural-gradient",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
]

# Pure geometric dependencies ONLY
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.urls]
Repository = "https://github.com/GaryOcean428/qig-core"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["qig_core"]

[tool.setuptools.package-data]
"qig_core" = ["py.typed"]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = false
ignore_missing_imports = true
